--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
       </table>
       
 
-      <table width="60%" border="2">
+      <!-- <table width="60%" border="2">
         <tr><td></td></tr>
       </table>
 
-    </center>
+    </center> -->
   </div>
       
         <!-- <tr><td><td></td></td></tr> -->
    
   
         <footer class="footer">
-          <a href="" onclick="window.confirm('TO DO ... ')">Connection</a>
+          <a href="" onclick="window.open('popup.html', target='_blank')">Connection</a>
         </footer>
   </body>
   
