--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
-  <body>
-    <h2>Admin access</h2>
+  <body bgcolor="#1f204e" style="color: #ffffff">
+    <h2>Admin console access</h2>
     <center>To do ....</center>
   </body>
 </html>
